--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# Compiled JS files
+public/js/main.js
+
+# Compiled CSS
+public/styles/style.css
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
@@ -24,5 +30,6 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
+# Sublime settings
 *.sublime-project
 *.sublime-workspace
