--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "Household spend calculations and graphs",
   "main": "gulpfile.js",
   "dependencies": {
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": "4.4.5",
     "gulp": "^3.8.5",
+    "gulp-autoprefixer": "0.0.10",
     "gulp-concat": "^2.2.0",
     "gulp-jshint": "^1.6.3",
-    "gulp-uglify": "^0.3.1",
     "gulp-sass": "^0.7.3",
-    "gulp-autoprefixer": "0.0.10",
-    "static-favicon": "~1.0.0",
-    "express": "4.4.5",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
+    "gulp-uglify": "^0.3.1",
     "jade": "~1.3.0",
+    "moment": "2.8.2",
     "mongoose": "~3.8.15",
-    "moment": "2.8.2"
+    "morgan": "~1.0.0",
+    "q": "^1.0.1",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
     "gulp-nodemon": "~1.0.4",
