--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "4.4.5",
-    "gulp": "^3.8.5",
+    "gulp": "^3.8.",
     "gulp-autoprefixer": "0.0.10",
     "gulp-concat": "^2.2.0",
     "gulp-jshint": "^1.6.3",
@@ -27,7 +27,9 @@
     "gulp-cssmin": "^0.1.6",
     "gulp-imagemin": "~1.0.1",
     "gulp-uncss": "^0.4.5",
-    "say": "~0.5.0"
+    "say": "~0.5.0",
+    "mocha": "~1.21.4",
+    "chai": "~1.9.1"
   },
   "scripts": {
     "start": "node ./bin/www",
