--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "4.4.5",
-    "gulp": "^3.8.",
+    "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.10",
     "gulp-concat": "^2.2.0",
     "gulp-jshint": "^1.6.3",
